res/examples/invalid/bare_range_expression.eg
0..10

// out: SyntaxError: unexpected end of file; expected: ["\";\"", "\"-\"", "\"+\"", "\"/\"", "\"%\"", "\"*\"", "\"!=\"", "\"==\"", "\">\"", "\">=\"", "\"<\"", "\"<=\"", "\"and\"", "\"or\""]